@@ -491,6 +491,9 @@ title page and document information:
 	<DT><CODE>&lt;META NAME="KEYWORDS" CONTENT="..."</CODE>
 	<DD>Specifies document search keywords.
 
+	<DT><CODE>&lt;META NAME="SUBJECT" CONTENT="..."</CODE>
+	<DD>Specifies document subject.
+
 </DL>
 
 <H2><A NAME="BREAKS">Page Breaks</A></H2>
